--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.5.13",
+    "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0"
   }
 }
