--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "author": "Maduka Chidimma Hephzibah",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.5.13",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0"
